--- a/Javascript Les 5/index.html
+++ b/Javascript Les 5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>quiz</title>
+    <title>quiz lol</title>
     <script src = "./quiz1.js"></script>
     <script src = "./quiz2.js"></script>
     <script src="./script.js" defer></script>
