--- a/Javascript Les 5/index1.html
+++ b/Javascript Les 5/index1.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>quiz</title>
+    <title>quiz lol</title>
     <script src = "./quiz1.js"></script>
     <script src = "./quiz2.js"></script>
     <script src="./script.js" defer></script>
